<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_category"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/categories"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        />

    <item
        android:id="@+id/action_ranking"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/ranking"
        android:icon="@drawable/ic_star_black_24dp"
        />
    <item
        android:id="@+id/action_top"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/top"
        android:icon="@drawable/ic_favorite_black_24dp"
        />


</menu>