<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:elevation="10dp"
    android:layout_margin="3dp"
    app:cardCornerRadius="8dp"
    android:layout_height="wrap_content"
    >
    
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/post_image"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@mipmap/add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/post_title"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/username"
            android:maxLines="20"
            android:layout_alignParentLeft="true"
            android:padding="3dp"
            android:layout_toLeftOf="@+id/like_button"
            android:layout_below="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/post_desc"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:paddingBottom="5dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/likeCount"
            android:layout_below="@+id/post_title"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="6dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/like_button"
            android:src="@drawable/ic_action_likes"
            android:background="@color/milk"
            android:layout_marginRight="12dp"
            android:layout_below="@+id/post_image"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/likeCount"
            android:textStyle="bold"
            android:layout_below="@+id/like_button"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:layout_margin="5dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content" />



    </RelativeLayout>

</android.support.v7.widget.CardView>
