<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/hadi"
    android:background="@drawable/vav"
    android:layout_height="match_parent"
    tools:context=".DoneActivity">



    <RelativeLayout
        android:padding="20dp"
        android:layout_margin="30dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/btnGroup"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtTotalScore"
                android:text="@string/score"
                android:textSize="27sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtTotalQuestion"
                android:text="@string/passed"
                android:textSize="27sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/doneProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <info.hoang8f.widget.FButton
                android:id="@+id/btnTryAgain"
                android:layout_margin="10dp"
                android:text="@string/tryagain"
                app:fButtonColor="@color/fbutton_color_wet_asphalt"
                app:shadowColor="@color/fbutton_color_asbestos"
                app:shadowEnabled="true"
                app:shadowHeight="6dp"
                app:cornerRadius="10dp"
                android:textColor="@color/milk"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3159482392412970/5534739770"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>