<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">
    <LinearLayout
        android:padding="10dp"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtNewUsername"
            android:inputType="text"
            android:hint="@string/username"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>
        <!--<com.rengwuxian.materialedittext.MaterialEditText-->
            <!--android:id="@+id/edtNewUsername"-->
            <!--android:inputType="text"-->
            <!--android:drawableLeft="@drawable/ic_person_black_24dp"-->
            <!--android:drawablePadding="10dp"-->
            <!--android:hint="@string/username"-->
            <!--android:textColorHint="@color/colorAccent"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:textSize="20sp"-->
            <!--app:met_baseColor="@color/colorAccent"-->
            <!--app:met_floatingLabel="highlight"-->
            <!--app:met_primaryColor="@color/colorAccent"-->
            <!--app:met_singleLineEllipsis="true"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtNewPassword"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>
        <!--<com.rengwuxian.materialedittext.MaterialEditText-->
            <!--android:id="@+id/edtNewPassword"-->
            <!--android:inputType="textPassword"-->
            <!--android:drawableLeft="@drawable/ic_lock_black_24dp"-->
            <!--android:drawablePadding="10dp"-->
            <!--android:hint="@string/password"-->
            <!--android:textColorHint="@color/colorAccent"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:textSize="20sp"-->
            <!--app:met_baseColor="@color/colorAccent"-->
            <!--app:met_floatingLabel="highlight"-->
            <!--app:met_primaryColor="@color/colorAccent"-->
            <!--app:met_singleLineEllipsis="true"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtNewEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>
        <!--<com.rengwuxian.materialedittext.MaterialEditText-->
            <!--android:id="@+id/edtNewEmail"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:drawableLeft="@drawable/ic_email_black_24dp"-->
            <!--android:drawablePadding="10dp"-->
            <!--android:hint="@string/email"-->
            <!--android:textColorHint="@color/colorAccent"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:textSize="20sp"-->
            <!--app:met_baseColor="@color/colorAccent"-->
            <!--app:met_floatingLabel="highlight"-->
            <!--app:met_primaryColor="@color/colorAccent"-->
            <!--app:met_singleLineEllipsis="true"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->


    </LinearLayout>
</android.support.v7.widget.CardView>